Fixed mug shot view on mobile

--- a/scss/modules/_front-cover.scss
+++ b/scss/modules/_front-cover.scss
@@ -189,6 +189,8 @@ body {
     margin-left: -10%;
   }
   #block-aboutbeccahillburn, #block-aboutbeccahillburn-2 {
+    padding-top: 250px;
+    padding-bottom: 0;
     & .container {
       padding-top: 30%;
       margin-bottom: -10%;
